--- a/views/user_input.erb
+++ b/views/user_input.erb
@@ -5,7 +5,14 @@
     <title>title</title>
   </head>
   <body>
+  <form method="post" action="/">
     <h1>Pig Latinizer</h1>
-  
+    <p>Enter your phrase:</p>
+    <textarea name="user_text"></textarea>
+    <br>
+    <button type="submit" value="submit">Submit</button>
   </body>
 </html>
+
+
+
